--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -74,8 +74,10 @@ html, body {
   // This is the logo at the top of the ToC
   .logo {
     display: block;
-    max-width: 100%;
-    margin-bottom: $logo-margin;
+    max-width: 200px;
+    width: 100%;
+    height: auto;
+    margin: $nav-v-padding auto $logo-margin;
   }
 
   &>.search {
